Fix: correct align size of all programs listing

--- a/frontend/styles/programs.css
+++ b/frontend/styles/programs.css
@@ -41,6 +41,7 @@
     flex: 1;
     min-width: 260px;
     max-width: unset;
+    padding: 5px;
 }
 #programs #list label.checkbox .icon {
     min-width: 72px;
